# paper_check

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
plugins/: sbj_prompt.json
preference/: preference.json
src/: analysis.py  bar.py  config.py  core.py  main_utils.py  ocr.py  preprocess.py  register.py  unwrap.py  xlsx_operations.py
src/bar/: bar.py
src/page/: db.py  register.py  settings.py
src/page/check_page/: check_page.py
