[project]
name = "paper-check"
version = "0.1.0"
description = "A paper simularity checker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.28.3",
    "llama-cpp-python>=0.3.15",
    "onnxruntime>=1.22.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.15.0",
    "rapidocr>=3.3.1",
]
