[project]
name = "paper-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.28.3",
    "flet-cli>=0.28.3",
    "paddleocr[doc-parser]>=3.3.2",
    "pymupdf>=1.26.7",
    "numpy>=2.4.0",
    "paddlepaddle>=3.2.2",
]
